--- a/tables/CrossPerformance.tex
+++ b/tables/CrossPerformance.tex
@@ -10,7 +10,7 @@
 
 \begin{tabularx}{\textwidth}{p{1.3em}l Z  Z  Z  Z  Z  Z }
     \toprule
-    \multirow{2}{1em}[-0.45em]{\rotatebox{90}{Dataset}} & \multirow{2}{*}[-0.9em]{\rotatebox{90}{Metric}}  & \multicolumn{ 3 }{c}{KISS-Original}  & \multicolumn{ 3 }{c}{unknown}                                                                                          \\
+    \multirow{2}{1em}[-0.45em]{\rotatebox{90}{Dataset}} & \multirow{2}{*}[-0.9em]{\rotatebox{90}{Metric}}  & \multicolumn{ 3 }{c}{KISS-Original}  & \multicolumn{ 3 }{c}{\WARC-optimized}                                                                                          \\
     \cmidrule(lr){ 3-5 }
     \cmidrule(lr){ 6-8 }
     &                            & GPT-4o        & GPT-4o-mini        & GPT-5-mini        & GPT-4o        & GPT-4o-mini        & GPT-5-mini           \\
