--- a/acronyms.sty
+++ b/acronyms.sty
@@ -49,7 +49,7 @@
 \DeclareAcronym{llama}{short=llama, long = \texttt{llama3.1:8b}}
 \DeclareAcronym{gpt-4o}{short=GPT-4o, long = \texttt{GPT-4o--2024-08-06}, cite=openai2024GPT4oSystem}
 \DeclareAcronym{gpt-4o-mini}{short=GPT-4o-mini, long = \texttt{GPT-4o-mini-2024-07-18}, cite=openai2024GPT4oSystem}
-\DeclareAcronym{gpt-5-mini}{short=GPT-5-mini, long = \texttt{GPT-5-mini-date}}
+\DeclareAcronym{gpt-5-mini}{short=GPT-5-mini, long = \texttt{GPT-5-mini-2025-08-07}}
 \DeclareAcronym{text-embedding}{short=text-embedding-3,long=\texttt{text-embedding-3-large}}
 \DeclareAcronym{gpt-copilot}{short=Copilot,long=\texttt{GPT-4.1 Copilot}}
 \DeclareAcronym{AI}{short=AI, long=Artifical Intelligence}
@@ -95,7 +95,9 @@
 \newcommand{\fbeta}[0]{F\textsubscript{$\beta$}-Score\xspace}
 \newcommand{\idots}[0]{\ensuremath{[\dots]}}
 \newcommand{\iter}[0]{\acs{iter}\xspace}
+\newcommand{\iterl}[0]{\acl{iter}\xspace}
 \newcommand{\feed}[0]{\acs{feed}\xspace}
+\newcommand{\feedl}[0]{\acl{feed}\xspace}
 \newcommand{\ucb}[0]{\ac{ucb}\xspace}
 \newcommand{\REST}[0]{\ac{REST}\xspace}
 
@@ -106,7 +108,7 @@
 \newcommand{\evaluator}[0]{\module{Evaluator}}
 \newcommand{\promptoptimizer}[0]{\module{Prompt Optimizer}}
 \newcommand{\elementstore}[0]{\module{Element Store}}
-\newcommand{\elementsores}{\elementstore's}
+\newcommand{\elementstores}{\elementstore's}
 \newcommand{\samplingstrategy}[0]{\module{Sample Strategy}}
 \newcommand{\reductor}[0]{\module{Reductor}}
 \newcommand{\cache}[0]{\module{Cache}}
@@ -115,3 +117,5 @@
 \newcommand{\classifiers}{\classifier's}
 \newcommand{\retrievalstrategy}{\module{Retrieval Strategy}}
 \newcommand{\method}[1]{\texttt{#1}\xspace}
+
+\newcommand{\omitt}[0]{[...]}
