chore: update abstract translation

--- a/acronyms.sty
+++ b/acronyms.sty
@@ -39,7 +39,7 @@
 \DeclareAcronym{LLM}{short=LLM, long=large language model}
 \DeclareAcronym{TLR}{short=TLR, long = traceability link recovery}
 \DeclareAcronym{TL}{short=TL, long = traceability link}
-\DeclareAcronym{ProTeGi}{short=ProTeGi, long = Prompt Optimization with Textual Gradients}
+\DeclareAcronym{ProTeGi}{short=ProTeGi, long = Prompt Optimization with Textual Gradients, cite=pryzant2023AutomaticPrompt}
 \DeclareAcronym{IR}{short=IR, long = information retrieval}
 \DeclareAcronym{KISS}{short=KISS, long = keep it short and simple}
 \DeclareAcronym{LiSSA}{short=LiSSA, long = Linking Software System Artifacts, cite=fuchss2025LiSSAGeneric}
@@ -49,7 +49,7 @@
 \DeclareAcronym{llama}{short=llama, long = \texttt{llama3.1:8b}}
 \DeclareAcronym{gpt-4o}{short=GPT-4o, long = \texttt{GPT-4o--2024-08-06}, cite=openai2024GPT4oSystem}
 \DeclareAcronym{gpt-4o-mini}{short=GPT-4o-mini, long = \texttt{GPT-4o-mini-2024-07-18}, cite=openai2024GPT4oSystem}
-\DeclareAcronym{gpt-5-mini}{short=GPT-5-mini, long = \texttt{GPT-5-mini-date}}
+\DeclareAcronym{gpt-5-mini}{short=GPT-5-mini, long = \texttt{GPT-5-mini-date}, cite=2025GPT5System}
 \DeclareAcronym{text-embedding}{short=text-embedding-3,long=\texttt{text-embedding-3-large}}
 \DeclareAcronym{gpt-copilot}{short=Copilot,long=\texttt{GPT-4.1 Copilot}}
 \DeclareAcronym{AI}{short=AI, long=Artifical Intelligence}
