--- a/thesis.bib
+++ b/thesis.bib
@@ -18,6 +18,14 @@
   keywords = {framework,llm,rag,retrieval-augmented-generation,tlr,traceability-recovery}
 }
 
+@online{2025GPT5System,
+  title = {{{GPT-5 System Card}}},
+  date = {2025-10-09},
+  url = {https://openai.com/index/gpt-5-system-card/},
+  urldate = {2025-10-14},
+  langid = {american}
+}
+
 @online{2025PromptEngineering,
   title = {Prompt {{Engineering Guide}}},
   date = {2025-04-24},
@@ -185,6 +193,18 @@
   date = {2025-09-06},
   doi = {10.5445/IR/1000183058},
   langid = {english}
+}
+
+@inproceedings{fuchss2025RetrievalStudya,
+  title = {Beyond Retrieval: A Study of Using LLM Ensembles for Candidate Filtering in Requirements Traceability},
+  shorttitle = {Beyond Retrieval},
+  booktitle = {2025 IEEE 33rd International Requirements Engineering Conference Workshops (RE)},
+  author = {Fuchß, Dominik and Schwedt, Stefan and Keim, Jan and Hey, Tobias},
+  date = {2025},
+  url = {https://publikationen.bibliothek.kit.edu/1000183058},
+  urldate = {2025-10-13},
+  eventtitle = {33rd IEEE International Requirements Engineering conference (RE 2025), Valencia, Spanien, 01.09.2025 – 05.09.2025},
+  langid = {ngerman}
 }
 
 @article{hayes2006AdvancingCandidate,
@@ -524,6 +544,18 @@
   urldate = {2025-06-14},
   eventtitle = {2023 {{IEEE}} 31st {{International Requirements Engineering Conference Workshops}} ({{REW}})},
   keywords = {automated software traceability,Conferences,large language models,prompt engineering,Requirements engineering,Software}
+}
+
+@software{schwab2025DanielDangoReplicationPackageAutomatedPromptEngineeringforTraceabilityLinkRecoverya,
+  title = {{{DanielDango}}/{{Replication-Package-Automated-Prompt-Engineering-for-Traceability-Link-Recovery}}: V0 {{Initialize Repo}}},
+  shorttitle = {{{DanielDango}}/{{Replication-Package-Automated-Prompt-Engineering-for-Traceability-Link-Recovery}}},
+  author = {Schwab, Daniel},
+  date = {2025-10-14},
+  doi = {10.5281/ZENODO.17350134},
+  url = {https://zenodo.org/doi/10.5281/zenodo.17350134},
+  urldate = {2025-10-14},
+  organization = {Zenodo},
+  version = {v0}
 }
 
 @online{shin2020AutoPromptEliciting,
