Update on Overleaf.

--- a/acronyms.sty
+++ b/acronyms.sty
@@ -108,7 +108,7 @@
 \newcommand{\evaluator}[0]{\module{Evaluator}}
 \newcommand{\promptoptimizer}[0]{\module{Prompt Optimizer}}
 \newcommand{\elementstore}[0]{\module{Element Store}}
-\newcommand{\elementsores}{\elementstore's}
+\newcommand{\elementstores}{\elementstore's}
 \newcommand{\samplingstrategy}[0]{\module{Sample Strategy}}
 \newcommand{\reductor}[0]{\module{Reductor}}
 \newcommand{\cache}[0]{\module{Cache}}
