--- a/sections/appendix.tex
+++ b/sections/appendix.tex
@@ -18,7 +18,9 @@
 
 \section{Tables}
 \label{sec:appendix:tables}
-		
+
+\newpage
+
 \setcounter{figure}{0}
 \begin{landscape}
     \begin{table}
@@ -26,12 +28,14 @@
         \renewcommand{\arraystretch}{1.2}
         \input{tables/GradientOptimizationReasoning}
         \renewcommand{\arraystretch}{1}
-        \caption{\ProTeGi for the \COT classification of \LiSSA}
+        \caption{\ProTeGi for the \CoT classification of \LiSSA}
+        \Todo{Why did this table die instead of getting rotated?}
         \label{tab:gradient_reasoning}
     \end{table}
 \end{landscape}
 
-\setcounter{prompt}{0}
+\newpage
+
 \section{Prompts}
 \label{sec:appendix:prompts}
 
