--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -432,7 +432,7 @@ To test this, the single best-performing prompt in terms of \fone will be used t
     \renewcommand{\arraystretch}{1.2}
     \input{tables/CrossPerformance}
     \renewcommand{\arraystretch}{1}
-    \caption{Classification performance of an optimized prompt for \WARC by \gptmini across other datasets}
+    \caption{Classification performance of an \ProTeGi optimized prompt for \WARC by \gptmini across other datasets}
     \label{tab:crossevaluation}
 \end{table}
 
