--- a/thesis.bib
+++ b/thesis.bib
@@ -761,3 +761,17 @@
   pubstate = {prepublished},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language}
 }
+
+@misc{schwab_danieldangoreplication-package-automated-prompt-engineering-for-traceability-link-recovery_2025,
+    title = {{DanielDango}/{Replication}-{Package}-{Automated}-{Prompt}-{Engineering}-for-{Traceability}-{Link}-{Recovery}: v0 {Initialize} {Repo}},
+    copyright = {MIT License},
+    shorttitle = {{DanielDango}/{Replication}-{Package}-{Automated}-{Prompt}-{Engineering}-for-{Traceability}-{Link}-{Recovery}},
+    url = {https://zenodo.org/doi/10.5281/zenodo.17350134},
+    abstract = {No description provided.},
+    urldate = {2025-10-14},
+    publisher = {Zenodo},
+    author = {Schwab, Daniel},
+    month = oct,
+    year = {2025},
+    doi = {10.5281/ZENODO.17350134},
+}
