--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -14,14 +14,14 @@
 \label{ch:Introduction}
 During software development, numerous artifacts are created, ranging from the actual project code to documentation and a multitude of formal and informal diagrams.
 \TLR aims to link correlating artifacts across different domains or versions.
-Further complications such as inconsistent naming are frequent issues in software projects~\cite{wohlrab2019ImprovingConsistency}.
+Further complications, such as inconsistent naming, are frequent issues in software projects~\cite{wohlrab2019ImprovingConsistency}.
 \TLR approaches need to be able to deal with all these challenges.
 
 \begin{figure}
     \centering
     \includegraphics[width=0.6\linewidth]{graphics/artifact_overview_Fuchß}
     \caption{Overview of different artifacts during software development, modified from \citewithauthor{fuchss2025LiSSAGeneric}.}
-    Artifacts are presented in white rounded boxes.
+    Artifacts are presented in white, rounded boxes.
     Existing \TLs between artifacts are highlighted with red dashed arrows.
     The background colors indicate different domains of artifacts.
     \label{fig:artifact_overview}
@@ -46,10 +46,10 @@ However, we can infer that \method{Db} is likely a database because it is used i
 This example illustrates that a multitude of factors need to be considered for \TLR. 
 Aside from or rather especially with naming inconsistencies, we need to consider more information to establish \TLs correctly.
 \Acp{LLM} have made rapid advancements in recent years.
-They are becoming increasingly popular for dealing with \TLR tasks and have shown auspicious results so far.
-\Todo{This needs proof, sowas sollte belegt werden. du redest hier über trends. LMs wurden schon davor für TLR etc. verwendet :)
-Hier mind. Zitate, die aktuell sind und TLR mit LLMs machen
-}
+They are becoming increasingly popular for dealing with various tasks and have shown auspicious results so far.
+\directQuote{LLMs have demonstrated significant potential in automating and enhancing tasks such as
+requirement elicitation, classification, generation, specification
+generation, and quality assessment}{jin2025LLMsLLMbased}
 As they are still unable to reason and think on their own~\cite{shojaee2025IllusionThinking}, prompt engineering is required to extract good results.
 \Todo{Wissen wir das? Quellen?}
 However, manually determining prompts suited for each specific problem is quite a tedious, time- and labor-intensive task.
@@ -77,6 +77,7 @@ The remainder of this thesis is structured as follows:
 \autoref{ch:Implementation} details the implementation of the concept.
 \autoref{ch:Evaluation} evaluates the implementation and answers the research questions.
 Finally, \autoref{ch:Conclusion} concludes the thesis and gives an outlook on possible future work.
+A replication package for this thesis is also provided \cite{schwab_danieldangoreplication-package-automated-prompt-engineering-for-traceability-link-recovery_2025}.
 
 \Todo{
 Die Blöcke sind alle noch relativ lose verbunden; ggf nochmal schauen, dass der Rote faden klar wird.}
